--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
        website, defining structure,content,and presentation</p></div>
 
     <div class="div3">
-      <img class="img2" src="image-avatar.webp" alt="Greg Hoper">
+      <img class="img2" src="image-avatar.webp" alt="Greg Hooper">
       <div class="p4"><p>Greg Hooper</p></div>
     </div>
      
